<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="default_web_client_id" translatable="false">NULL</string>

    <string name="sign_in_error">Sign In Error!</string>
    <string name="registration_error">Registration Error!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="sign_in_email">Sign In</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="do_not_ask_again">Don\'t ask again</string>
    <string name="password_again">Password Again</string>
    <string name="passwords_dont_match">Passwords Don\'t Match!</string>
    <string name="not_all_fields">Not all fields are filled in!</string>
</resources>